# primitive_lidar_filter

./: CMakeLists.txt  README.md  package.xml
cfg/: MyParams.cfg
include/primitive_lidar_filter/: primitive_lidar_filter_core.hpp
launch/: default.rviz  demo.launch  rviz.launch
src/: box_node.cpp
